cabal-version:      2.4
name:               spo-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             euonymos
maintainer:         ilia@mlabs.city

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        aeson
      , async
      , base
      , base16
      , bech32
      , bech32-th
      , bytestring
      , cardano-api
      , cardano-binary
      , cardano-crypto-class
      , cardano-crypto-wrapper
      , cardano-ledger-alonzo
      , cardano-ledger-babbage
      , cardano-ledger-core
      , cardano-ledger-shelley
      , cardano-slotting
      , conduit
      , containers
      , cryptohash-sha256
      , cryptonite
      , deferred-folds
      , directory
      , either
      , esqueleto
      , exceptions
      , extra
      , filepath
      , focus
      , hashable
      , heaps
      , hs-opentelemetry-api
      , hs-opentelemetry-sdk
      , http-client
      , http-client
      , http-conduit
      , http-media
      , http-types
      , katip
      , lifted-async
      , lifted-base
      , memory
      , monad-control
      , monad-logger
      , mtl
      , optics
  --    , optim-offchain
      , optparse-applicative
    --   , ouroboros-consensus
    --   , ouroboros-network
      , persistent
      , persistent-pagination
      , persistent-postgresql
      , plutus-core
      , plutus-ledger-api
  --    , plutus-simple-model
      , plutus-tx
  --    , ply-core
      , prettyprinter
      , random
      , resource-pool
      , safe-exceptions
      , serialise
      , servant
      , servant-pagination > 2.1
      , servant-server
      , stm
      , stm-containers
      , string-conv
      , text
      , time
      , transformers
      , transformers-base
      , transformers-except
      , unordered-containers
      , vector
      , wai
      , websockets

    hs-source-dirs:   src
    default-language: Haskell2010

executable spo-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        spo-server

    hs-source-dirs:   app
    default-language: Haskell2010
